force-app/main/default/objects/Attendance__c/fields/OT_Eligible__c.field-meta.xml
<CustomField>
    <fullName>OT_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OT Eligible</label>
    <type>Checkbox</type>
</CustomField>