force-app/main/default/objects/Attendance__c/validationRules/Enter_Check_out_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Check_out_Time</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Check_in_Time__c )),
    ISBLANK( Check_out_Time__c )
)</errorConditionFormula>
    <errorDisplayField>Check_out_Time__c</errorDisplayField>
    <errorMessage>Please enter Check-out Time.</errorMessage>
</ValidationRule>