force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendance_Date__c</columns>
    <columns>Attendance_Status__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>OT_Eligible__c</columns>
    <columns>Source_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>